# nix

./: .gitignore  .rules  CLAUDE.md  README.md  backup.fish  bun.lockb  devbox.json  devenv.nix  flake.nix  flake_old.nix  fleet.tf  home.nix  install.nu  install.sh  package.json  reg.tf  sb-1.12.json  setup.nu
arch/: conf.json  creds.json  install.md  install.sh
beforeRefactor/: flake.nix
config/: vpn.conf
docs/: document-signing.md
etc/: flake.nix
home/: de.nix  default.nix  dev.nix  environment.nix  fonts.nix  home.nix  hyprland.nix  packages.nix  shell.nix  theme.nix
home/programs/jora/: Cargo.toml  README.md  docker-compose.yaml  shell.nix
home/programs/jora/src/: commands.py  commands.rs  detector.py  main.py  main.rs  recognizer.py  stream_recognizer.py
home/programs/jora/src copy/: main.py  recognition.py  silero_detector.py  wake_word.py  Давай_ru_linux_v3_0_0.ppn
home/programs/jora/src copy 1/: commands.py  main.py  stream_recognizer.py
home/programs/jora/src/audio/: audio_recorder.py  audio_stream.py  debug_player.py
home/programs/jora/src/commands/: handlers.py  processor.py
home/programs/jora/src/recognition/: detector.py  recognizer.py  streamer.py
home/programs/jora/src/utils/: config.py  logger.py
nix-config/: flake.nix
nixos/: README.md  configuration.nix  disko.nix  flake.nix  hardware-configuration.nix  virtualization.nix
rolder-dev/: terraform.tfstate  terraform.tfstate.backup  vms.tf
rolder-net/: AGENT.md  INSTALL.md  README.md  common.nix  configuration.nix  debug-ssh.sh  disk-config.nix  flake.nix  install.sh  (+2 more)
(+1589 files in other folders)
