[package]
name = "jora"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
reqwest = { version = "0.12.9", features = ["blocking", "multipart"] }
voice-stream = "0.3.0"
ort-sys = "=2.0.0-rc.8"
cpal = "0.15.3"
hound = "3.5.1"
bytes = "1.9.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
colored = "2.1.0"
